--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "back-users",
+  "name": "back-auth",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "mongoose": "^7.0.3",
     "nodemon": "^2.0.22"
   }
 }
